--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url("destaques.css");
+@import url("populares.css");
 
 .app {
     background: #f1f1f1;
@@ -18,6 +19,7 @@
  
 .conteudo {
     grid-area: conteudo;
+    padding: 0 2rem;
 }
 
 .rodape {
