--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url("destaques.css");
 @import url("populares.css");
+@import url("menu.css");
+@import url("responsivo.css");
 
 .app {
     background: #f1f1f1;
@@ -10,11 +12,14 @@
         "conteudo"
         "rodape";
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh auto;
+    grid-template-rows: 50px auto auto;
 }
 
 .cabecalho {
+    display: flex;
+    align-items: center;
     grid-area: cabecalho;
+    padding: 0 2rem;
 }
  
 .conteudo {
@@ -23,5 +28,10 @@
 }
 
 .rodape {
+    background: #fdfdfd;
+    color: #333333;
+    font-size: .8rem;
     grid-area: rodape;
+    padding: 1rem;
+    text-align: center;
 }
